# RustOtus

fizz_buzz1/: Cargo.toml
smart_client/: Cargo.toml
smart_client/log/: output.txt
smart_client/src/: console_server.rs  err_house.rs  main.rs  protocol.rs  smart_house_tcp_client.rs  smart_house_udp_client.rs  transport_layer.rs
smart_house/: Cargo.toml  Config.json
smart_house/examples/: smart_house.rs
smart_house/log/: output.txt
smart_house/src/: err_house.rs  lib.rs  main.rs  protocol.rs  room.rs  smart_house.rs  task.rs  transport_layer.rs
smart_house/src/device/: mod.rs  smart_socket.rs  smart_thermometer.rs  sock_emulator.rs  sock_handler.rs  sock_view.rs  socket_protocol.rs  therm_emulator.rs  therm_handler.rs  therm_view.rs  transport_layer.rs
smart_house/src/room/: mod.rs
smart_house/tests/: smart_house_tests.rs
smart_server/: Cargo.toml  Config.txt
smart_server/src/: console_server.rs  err_house.rs  main.rs  protocol.rs  smart_house_tcp_server.rs  smart_house_udp_server.rs  transport_layer.rs
smart_server/src/device/: mod.rs  smart_socket.rs  smart_therm.rs
socket_emulator/: Cargo.toml
socket_emulator/src/: main.rs  socket_emulator.rs  socket_protocol.rs
