[package]
name = "smart_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
serde_json = "1.0.127"
serde = {version = "1.0.209", features = ["derive"]}
bincode = "1.3.3"
log = "0.4.22"
log4rs = "1.3.0"
