[package]
name = "smart_house"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
serde = {version = "1.0.209", features = ["derive"]}
bincode = "1.3.3"
log = "0.4.22"
log4rs = "1.3.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
lazy_static = "1.5.0"
anyhow = "1.0.89"
thiserror = "1.0.64"
